<?xml version="1.0" encoding="UTF-8"?>
<!--suppress ALL -->
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.1.6.RELEASE</version>
    </parent>
    <groupId>com.jakubeeee</groupId>
    <artifactId>parent</artifactId>
    <version>1.0</version>
    <description>Parent module for jakubeeee-integrator application</description>
    <packaging>pom</packaging>

    <developers>
        <developer>
            <name>Jakubeeee</name>
            <url>https://github.com/Jakubeeee</url>
            <roles>
                <role>developer</role>
            </roles>
        </developer>
    </developers>

    <scm>
        <url>https://github.com/Jakubeeee/online-shop-integration</url>
    </scm>

    <modules>
        <module>testutils</module>
        <module>common</module>
        <module>testcore</module>
        <module>core</module>
        <module>security</module>
        <module>tasks</module>
        <module>integration</module>
        <module>frontend</module>
        <module>assembly</module>
    </modules>

    <properties>
        <maven.version>3.6.0</maven.version>
        <java.version>11</java.version>
        <node.version>v10.16.3</node.version>
        <npm.version>6.11.3</npm.version>
        <project.encoding>UTF-8</project.encoding>

        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <project.build.sourceEncoding>${project.encoding}</project.build.sourceEncoding>
        <project.reporting.outputEncoding>${project.encoding}</project.reporting.outputEncoding>

        <heroku.appname><!-- heroku application name here --></heroku.appname>
        <heroku.artifact.path>target/${project.build.finalName}.${project.packaging}</heroku.artifact.path>

        <frontend.sources.output.directory>${maven.multiModuleProjectDirectory}/assembly/src/main/resources/public
        </frontend.sources.output.directory>

        <frontend.maven.plugin.version>1.6</frontend.maven.plugin.version>
        <duplicate.finder.maven.plugin.version>1.3.0</duplicate.finder.maven.plugin.version>
        <heroku.maven.plugin.version>2.0.7</heroku.maven.plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>

            <dependency>
                <groupId>com.jakubeeee</groupId>
                <artifactId>testutils</artifactId>
                <version>1.0</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.jakubeeee</groupId>
                <artifactId>testcore</artifactId>
                <version>1.0</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.jakubeeee</groupId>
                <artifactId>core</artifactId>
                <version>1.0</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>com.jakubeeee</groupId>
                <artifactId>common</artifactId>
                <version>1.0</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>com.jakubeeee</groupId>
                <artifactId>security</artifactId>
                <version>1.0</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>com.jakubeeee</groupId>
                <artifactId>tasks</artifactId>
                <version>1.0</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>com.jakubeeee</groupId>
                <artifactId>integration</artifactId>
                <version>1.0</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>1.18.10</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>commons-beanutils</groupId>
                <artifactId>commons-beanutils</artifactId>
                <version>1.9.3</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.9</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>org.apache.cxf</groupId>
                <artifactId>cxf-rt-frontend-jaxws</artifactId>
                <version>3.3.2</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>org.dom4j</groupId>
                <artifactId>dom4j</artifactId>
                <version>2.1.1</version>
            </dependency>
            <dependency>
                <groupId>com.diffplug.durian</groupId>
                <artifactId>durian</artifactId>
                <version>3.4.0</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>org.codehaus.groovy</groupId>
                <artifactId>groovy</artifactId>
                <version>2.5.7</version>
                <scope>compile</scope>
            </dependency>
            <dependency>
                <groupId>jaxen</groupId>
                <artifactId>jaxen</artifactId>
                <version>1.2.0</version>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>org.webjars.npm</groupId>
                <artifactId>bulma</artifactId>
                <version>0.7.5</version>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>org.webjars</groupId>
                <artifactId>material-design-icons</artifactId>
                <version>3.0.1</version>
                <scope>runtime</scope>
            </dependency>
            <dependency>
                <groupId>org.powermock</groupId>
                <artifactId>powermock-module-junit4</artifactId>
                <version>2.0.2</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.powermock</groupId>
                <artifactId>powermock-api-mockito2</artifactId>
                <version>2.0.2</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>database-commons</artifactId>
                <version>1.12.0</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.dbunit</groupId>
                <artifactId>dbunit</artifactId>
                <version>2.6.0</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.icegreen</groupId>
                <artifactId>greenmail-spring</artifactId>
                <version>1.5.7</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>com.github.springtestdbunit</groupId>
                <artifactId>spring-test-dbunit</artifactId>
                <version>1.3.0</version>
                <scope>test</scope>
            </dependency>
            <dependency>
                <groupId>org.testcontainers</groupId>
                <artifactId>testcontainers-merged</artifactId>
                <version>1.12.0</version>
                <scope>test</scope>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <inherited>false</inherited>
                    <executions>
                        <execution>
                            <id>enforce-profiles</id>
                            <goals>
                                <goal>enforce</goal>
                            </goals>
                            <configuration>
                                <rules>
                                    <requireProperty>
                                        <property>maven.build.type</property>
                                        <message>You must launch maven build with at least one of following profiles:
                                            full-build or back-build
                                        </message>
                                    </requireProperty>
                                    <requireProperty>
                                        <property>maven.environment</property>
                                        <message>You must launch maven build with at least one of following profiles:
                                            local or heroku
                                        </message>
                                    </requireProperty>
                                </rules>
                                <fail>true</fail>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-antrun-plugin</artifactId>
                    <version>1.8</version>
                    <executions>
                        <execution>
                            <id>clean-frontend-output</id>
                            <phase>initialize</phase>
                            <goals>
                                <goal>run</goal>
                            </goals>
                            <configuration>
                                <target>
                                    <delete dir="src\main\resources\public" includeemptydirs="true"/>
                                </target>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <artifactId>maven-resources-plugin</artifactId>
                    <executions>
                        <execution>
                            <id>copy-frontend-output</id>
                            <phase>generate-resources</phase>
                            <goals>
                                <goal>copy-resources</goal>
                            </goals>
                            <configuration>
                                <outputDirectory>${frontend.sources.output.directory}</outputDirectory>
                                <overwrite>true</overwrite>
                                <resources>
                                    <resource>
                                        <directory>${project.parent.basedir}/frontend/target/dist</directory>
                                        <includes>
                                            <include>static/</include>
                                            <include>index.html</include>
                                        </includes>
                                    </resource>
                                </resources>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <configuration>
                        <forceJavacCompilerUse>true</forceJavacCompilerUse>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>1.18.10</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <configuration>
                        <forkCount>0</forkCount>
                        <argLine>--illegal-access=permit</argLine>
                        <groups>com.jakubeeee.testutils.marker.LightTestCategory</groups>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <configuration>
                        <archive>
                            <addMavenDescriptor>false</addMavenDescriptor>
                        </archive>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-war-plugin</artifactId>
                    <configuration>
                        <archive>
                            <addMavenDescriptor>false</addMavenDescriptor>
                        </archive>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <configuration>
                        <forkCount>0</forkCount>
                        <argLine>--illegal-access=permit</argLine>
                        <groups>com.jakubeeee.testutils.marker.HeavyTestCategory</groups>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.basepom.maven</groupId>
                    <artifactId>duplicate-finder-maven-plugin</artifactId>
                    <version>${duplicate.finder.maven.plugin.version}</version>
                    <executions>
                        <execution>
                            <id>check-classpath-duplicates</id>
                            <phase>verify</phase>
                            <goals>
                                <goal>check</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <quiet>true</quiet>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>com.heroku.sdk</groupId>
                    <artifactId>heroku-maven-plugin</artifactId>
                    <version>${heroku.maven.plugin.version}</version>
                    <executions>
                        <execution>
                            <id>deploy-on-heroku</id>
                            <phase>install</phase>
                            <goals>
                                <goal>deploy</goal>
                            </goals>
                        </execution>
                    </executions>
                    <configuration>
                        <appName>${heroku.appname}</appName>
                        <jdkVersion>${java.version}</jdkVersion>
                        <includeTarget>false</includeTarget>
                        <buildpacks>
                            <buildpack>heroku/jvm</buildpack>
                        </buildpacks>
                        <includes>
                            <include>${project.basedir}/${heroku.artifact.path}</include>
                        </includes>
                        <processTypes>
                            <web>java -Dserver.port=$PORT -jar ${heroku.artifact.path}</web>
                        </processTypes>
                    </configuration>
                </plugin>

            </plugins>
        </pluginManagement>

        <plugins>

            <!-- PLUGINS LAUNCHED BY EVERY CHILD MODULE -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
            </plugin>

        </plugins>

    </build>

    <profiles>

        <!-- PROFILE GROUP: BUILD PROFILES -->
        <profile>
            <id>full-build</id>
            <properties>
                <maven.build.type>full-build</maven.build.type>
            </properties>
        </profile>
        <profile>
            <id>back-build</id>
            <properties>
                <maven.build.type>back-build</maven.build.type>
            </properties>
        </profile>

        <!-- PROFILE GROUP: ENVIRONMENT PROFILES -->
        <profile>
            <id>local</id>
            <properties>
                <maven.environment>local</maven.environment>
            </properties>
        </profile>
        <profile>
            <id>heroku</id>
            <properties>
                <maven.environment>heroku</maven.environment>
            </properties>
        </profile>

        <!-- ADDITIONAL PROFILES -->
        <profile>
            <id>debug</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.basepom.maven</groupId>
                        <artifactId>duplicate-finder-maven-plugin</artifactId>
                    </plugin>
                </plugins>
            </build>
        </profile>

    </profiles>

    <repositories>
        <repository>
            <id>custom-maven-repository</id>
            <name>In-project integrated maven repository for custom libraries</name>
            <url>file://${maven.multiModuleProjectDirectory}/tools/custom-maven-repository</url>
            <releases>
                <updatePolicy>always</updatePolicy>
            </releases>
        </repository>
    </repositories>

</project>